--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: Getting started with MkDocs
-site_url: https://example.com/
+site_url: https://doh2pro.com/
 nav:
     - Home: index.md
     - About: about.md
